Font changes. Also displays bpm for tempo

--- a/browser/js/common/directives/navbar/navbar.html
+++ b/browser/js/common/directives/navbar/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-static-top">
     <div class="container">
         <div class="navbar-header">
-            <app-logo></app-logo>
+            <!-- <app-logo></app-logo> -->
         </div>
         <ul class="nav navbar-nav">
         </ul>
