can now toggle different graphs

--- a/browser/js/home/home.html
+++ b/browser/js/home/home.html
@@ -1,4 +1,10 @@
 <section id="home">  
+	<div id="toggles">
+	<span style="color: white; padding-left: 20px" ng-click="stopSong()">{{currentSong.name}}</span>
+	<div class="btn-group" role="group" aria-label="...">
+	  		<button ng-repeat="option in optionList" type="button" class="btn btn-default" ng-click="changeMeta(option.value)">{{option.name}}</button>
+	</div>
+	</div>
 	<div id="chart">
 	</div>
 </section>
