--- a/browser/js/common/directives/navbar/navbar.html
+++ b/browser/js/common/directives/navbar/navbar.html
@@ -13,6 +13,9 @@
         </div>
     </div>
 
+    <span ng-show="!user" class="title">Visify</span>
+    <span ng-show="!user" class="title subtitle">Analyse your listening</span>
+
     <a ng-show="!user" href="/auth/spotify" class="login-button"><img id="spotify-icon" src="/spotify-icon.png">Login with Spotify</a>
 </nav>
 
