redid the front page

--- a/browser/js/common/directives/navbar/navbar.html
+++ b/browser/js/common/directives/navbar/navbar.html
@@ -13,9 +13,9 @@
         </div>
     </div>
 
-    <span ng-show="!user" class="title">Visify</span>
-  
-    <span ng-show="!user" class="title subtitle">Analyse your listening</span>
+    <span ng-show="!user" id="mytitle">Visify</span>
+
+    <span ng-show="!user" id="mysubtitle">See your soundtrack</span>
 
     <a ng-show="!user" href="/auth/spotify" class="login-button"><img id="spotify-icon" src="/spotify-icon.png">Login with Spotify</a>
 </nav>
