--- a/browser/js/home/home.html
+++ b/browser/js/home/home.html
@@ -9,8 +9,18 @@
 	
     </div>
 
+
 	<div id="chart">
 	<span us-spinner="{radius:30, width:8, length: 16}"></span>
+
+
+<div class="widget">
+    <div id="pieChart" class="chart-container"></div>
 	</div>
+	
+	</div>
+
+	<footer>
+	</footer>
 </section>
 
