--- a/browser/js/home/home.html
+++ b/browser/js/home/home.html
@@ -1,8 +1,9 @@
 <section id="home">  
-	<!-- <button ng-click="clicky()"><span>Wow</span></button> -->
 	<div id="toggles">
 	<span ng-show="currentSong" id="player" ng-click="stopSong()"><span style="color: gray; padding-left: 20px" class="glyphicon glyphicon-remove
 "></span><img id="albumImage" ng-src="{{currentSong.album.images[0].url}}"><b>{{currentSong.name| limitTo:50}}</b><span ng-if="currentSong.name.length > 50">...</span> - {{currentSong.artists[0].name}}</span>
+
+	<div id="notice" ng-show="tracks && !notice" ng-click="notice = true"><span id="noticeborder">Click on a chart to hear your music</span></div>
 
 		<div ng-show='tracks' id="vert-buttons" class="ui vertical buttons">
 		  <button ng-repeat="option in optionList" class="ui button" ng-click="changeMeta(option.value)" ng-class="metadata===option.value ? 'active' : ''">{{option.name}}</button>
@@ -12,8 +13,8 @@
     </div>
 
 
-	<div id="chart">
-	<span us-spinner="{radius:30, width:8, length: 16}"></span>
+	<div id="chart" ng-click="notice = true">
+	<span us-spinner="{radius:30, width:8, length: 16}" spinner-on="showSpinner"></span>
 	<span id="analyzing" ng-show="user && !tracks">Analyzing your playlists...</span>
 
 
